--- a/05qr/index.html
+++ b/05qr/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.amazon.de">
+    <meta http-equiv="refresh" content="0; url=https://play.famobi.com/fruit-party">
     <title>Weiterleitung...</title>
 </head>
 <body>
-    <p>Sie werden weitergeleitet. Falls dies nicht funktioniert, klicken Sie <a href="https://www.amazon.de">hier</a>.</p>
+    <p>Sie werden weitergeleitet. Falls dies nicht funktioniert, klicken Sie <a href="https://play.famobi.com/fruit-party">hier</a>.</p>
 </body>
 </html>
