--- a/30qr/index.html
+++ b/30qr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Scooter Spiel</title>
+    <title>Weiterleitung zum E-Scooter Spiel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,6 +29,10 @@
             border: 2px solid #333;
             border-radius: 10px;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
         }
 
         iframe {
@@ -73,7 +77,7 @@
 <body>
 
     <main>
-        <h1>Spiele E-Scooter direkt auf dieser Seite!</h1>
+        <h1>Weiterleitung zum E-Scooter Spiel</h1>
         
         <div class="game-container">
             <!-- Einbettungscode für das E-Scooter-Spiel -->
@@ -95,3 +99,4 @@
 
 </body>
 </html>
+
