--- a/30qr/index.html
+++ b/30qr/index.html
@@ -90,9 +90,14 @@
 
         <!-- Haftungsausschluss -->
         <div class="disclaimer">
-            <p>Die Inhalte des hier eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. 
-            Wir haben keinen Einfluss auf die Inhalte, die Datenschutzpraktiken oder die Sicherheit der Zielseite. Die Verantwortung für die Inhalte der verlinkten Seite 
-            liegt ausschließlich bei deren Betreiber. Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen können.</p>
+            <p><div class="disclaimer">
+    <p>Die Inhalte des hier eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. 
+    Wir haben keinen Einfluss auf die Inhalte, die Datenschutzpraktiken, die Sicherheit oder die Werbung auf der Zielseite. 
+    Die Verantwortung für die Inhalte und die auf der verlinkten Seite angezeigte Werbung liegt ausschließlich bei deren Betreiber. 
+    Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen können, 
+    einschließlich der dort angezeigten Werbung.</p>
+</div>
+</p>
         </div>
 
     </main>
