--- a/331qr/index.html
+++ b/331qr/index.html
@@ -91,11 +91,7 @@
         <!-- Haftungsausschluss -->
         <div class="disclaimer">
             <p><div class="disclaimer">
-    <p>Die Inhalte des hier eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. 
-    Wir haben keinen Einfluss auf die Inhalte, die Datenschutzpraktiken, die Sicherheit oder die Werbung auf der Zielseite. 
-    Die Verantwortung für die Inhalte und die auf der verlinkten Seite angezeigte Werbung liegt ausschließlich bei deren Betreiber. 
-    Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen können, 
-    einschließlich der dort angezeigten Werbung.</p>
+    <p>Die Inhalte des eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. Wir haben keinen Einfluss auf die Inhalte, Datenschutzpraktiken, Sicherheit oder Werbung auf der Zielseite. Für die Inhalte sowie die dort angezeigte Werbung ist ausschließlich der Betreiber der verlinkten Seite verantwortlich. Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen.</p>
 </div>
 </p>
         </div>
