--- a/01qr/index.html
+++ b/01qr/index.html
@@ -6,7 +6,7 @@
     <title>Weiterleitung zum E-Scooter Spiel</title>
     
     <!-- Weiterleitung nach 5 Sekunden -->
-    <meta http-equiv="refresh" content="5;url=https://play.famobi.com/color-tunnel">
+    <meta http-equiv="refresh" content="5;url=https://play.famobi.com/cut-the-rope">
     
     <style>
         body {
