--- a/01qr/index.html
+++ b/01qr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weiterleitung zum E-Scooter Spiel</title>
+    <title>Weiterleitung Spiel</title>
     
     <!-- Weiterleitung nach 5 Sekunden -->
     <meta http-equiv="refresh" content="5;url=https://play.famobi.com/cut-the-rope">
