--- a/01qr/index.html
+++ b/01qr/index.html
@@ -85,7 +85,7 @@
         
         <div class="game-container">
             <!-- Einbettungscode für das E-Scooter-Spiel -->
-            <iframe src="https://play.famobi.com/color-tunnel" allowfullscreen="true"></iframe>
+            <iframe src="https://play.famobi.com/cut-the-rope" allowfullscreen="true"></iframe>
         </div>
 
         <div class="footer">
