--- a/01qr/index.html
+++ b/01qr/index.html
@@ -81,7 +81,7 @@
 <body>
 
     <main>
-        <h1>Weiterleitung zum E-Scooter Spiel</h1>
+        <h1>Weiterleitung</h1>
         
         <div class="game-container">
             <!-- Einbettungscode für das E-Scooter-Spiel -->
