--- a/01qr/index.html
+++ b/01qr/index.html
@@ -93,9 +93,10 @@
         </div>
 
         <!-- Haftungsausschluss -->
-        <div class="disclaimer">
-            <p>Die Inhalte des eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. Wir haben keinen Einfluss auf die Inhalte, Datenschutzpraktiken, Sicherheit oder Werbung auf der Zielseite. Für die Inhalte sowie die dort angezeigte Werbung ist ausschließlich der Betreiber der verlinkten Seite verantwortlich. Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen.</p>
-        </div>
+<div class="disclaimer">
+    <p>Die Inhalte des eingebetteten Spiels werden von der externen Website <a href="https://famobi.com" target="_blank">Famobi.com</a> bereitgestellt. Wir haben keinen Einfluss auf die Inhalte, Datenschutzpraktiken, Sicherheit oder Werbung auf der Zielseite. Für die Inhalte sowie die dort angezeigte Werbung ist ausschließlich der Betreiber der verlinkten Seite verantwortlich. Wir übernehmen keine Haftung für Schäden, die durch den Besuch oder die Nutzung der verlinkten Seite entstehen. Die Verantwortung für die Einhaltung der Altersfreigabe liegt bei den Eltern oder Erziehungsberechtigten.</p>
+</div>
+
 
     </main>
 
