--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -6,7 +6,7 @@
     <title>Bild anzeigen</title>
 </head>
 <body>
-    <img src="IMG_2561.jpg" alt="lesa">
+    <img src="IMG_2561.JPG" alt="lesa">
 </body>
 </html>
 
