--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -11,7 +11,7 @@
             align-items: center; /* Vertikal zentrieren */
             height: 100vh; /* Volle Bildschirmhöhe */
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #5d5d5d;
         }
         img {
             max-width: 90%; /* Bild passt sich an */
