--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <img src="IMG_2561.JPG" alt="Mein Bild">
+    <img src="https://www.canva.com/design/DAGgmL88sag/Vi4f_q81WYs6ba02APOjpA/view?utm_content=DAGgmL88sag&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hfc198c9e83" alt="Mein Bild">
 </body>
 </html>
