--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ehliX</title>
@@ -12,6 +9,7 @@
 <body>
   <div id="spruchContainer">
     <p id="spruch">ehliX</p>     
+    <iframe width="1" height="1" src="https://www.youtube.com/embed/s7NJrKXWmM8?autoplay=1&loop=1&playlist=s7NJrKXWmM8" frameborder="0"></iframe>
   </div>        
 
   <script src="sprueche.js"></script>
