--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -9,8 +9,8 @@
 <body>
   <div id="spruchContainer">
     <p id="spruch">ehliX</p>     
-    <!-- Das YouTube-iframe wird jetzt versteckt und im Hintergrund abgespielt -->
-    <iframe id="background-music" src="https://www.youtube.com/embed/s7NJrKXWmM8?autoplay=1&loop=1&playlist=s7NJrKXWmM8" frameborder="0" style="position: absolute; width: 0; height: 0; visibility: hidden;"></iframe>
+    <!-- YouTube-Video wird jetzt auf kleine, aber sichtbare Größe gesetzt und verschoben -->
+    <iframe id="background-music" src="https://www.youtube.com/embed/s7NJrKXWmM8?autoplay=1&loop=1&playlist=s7NJrKXWmM8" frameborder="0" style="position: absolute; width: 1px; height: 1px; left: -9999px; top: -9999px;"></iframe>
   </div>        
 
   <script src="sprueche.js"></script>
@@ -32,4 +32,5 @@
   </script>
 </body>
 </html>
+
 
