--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -9,8 +9,10 @@
 <body>
   <div id="spruchContainer">
     <p id="spruch">ehliX</p>     
-    <!-- Minimal sichtbares YouTube-Video -->
-    <iframe id="background-music" src="https://www.youtube.com/embed/s7NJrKXWmM8?autoplay=1&loop=1&playlist=s7NJrKXWmM8" frameborder="0" style="position: absolute; width: 0px; height: 0px;"></iframe>
+    <!-- SoundCloud Embed für das Musikstück -->
+    <iframe width="0" height="0" scrolling="no" frameborder="no" 
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1257842852&color=%23888888&auto_play=true&hide_related=true&show_comments=false&show_user=true&show_reposts=false&visual=true">
+    </iframe>
   </div>        
 
   <script src="sprueche.js"></script>
@@ -32,6 +34,5 @@
   </script>
 </body>
 </html>
-
 
 
