--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -10,7 +10,7 @@
   <div id="spruchContainer">
     <p id="spruch">ehliX</p>     
     <!-- SoundCloud Embed für das Musikstück -->
-    <iframe width="0" height="0" scrolling="no" frameborder="no" 
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" 
       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1257842852&color=%23888888&auto_play=true&hide_related=true&show_comments=false&show_user=true&show_reposts=false&visual=true">
     </iframe>
   </div>        
@@ -34,5 +34,6 @@
   </script>
 </body>
 </html>
+
 
 
