--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -11,7 +11,7 @@
     <p id="spruch">ehliX</p>     
     <!-- SoundCloud Embed für das Musikstück -->
     <iframe width="0" height="0" scrolling="no" frameborder="no" 
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1257842852&color=%23888888&auto_play=true&hide_related=true&show_comments=false&show_user=true&show_reposts=false&visual=true">
+      src="https://soundcloud.com/schlafofficial/sets/einschlafmusik-gegen-angst-und?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
     </iframe>
   </div>        
 
