--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <h1>Name speichern</h1>
+    <h1>Name speichernen</h1>
 
     <form id="nameForm">
         <input type="text" id="nameInput" placeholder="Name eingeben" required>
